--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>helikopter</p>
     <nav>
          
-        <a href="">Ноутбуки</a> 
+        <a href=" https://zhenya228555.github.io/p1/">Ноутбуки</a> 
         
     </nav>
     <div class="nav1">
